--- a/skyfolk/templates/account/login.html
+++ b/skyfolk/templates/account/login.html
@@ -1,15 +1,15 @@
-{% extends "account/base.html" %}
+{% extends "account/base_login.html" %}
 
 {% load i18n %}
 {% load account %}
 {% load url from future %}
-{% load staticfiles %}
 
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
+<!--{% block head_title %}{% trans "Sign In" %}{% endblock %}-->
 
 {% block extra_head %}
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/login.css" />
-<!--<link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}" />-->
+<!--<link rel="stylesheet" type="text/css" href=".../static/css/login.css" />-->
+
 {% endblock %}
 
 {% block content %}
@@ -34,18 +34,20 @@ for a {{site_name}} account and sign in below:{% endblocktrans %}</p>
 {% include "socialaccount/snippets/login_extra.html" %}
 
 {% else %}
+<!--
 <p>{% blocktrans %}If you have not created an account yet, then please
 <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+-->
 {% endif %}
-
-<form class="login" method="POST" action="{% url 'account_login' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
-</form>
-
+<div class="block-form">
+	<form class="login form-3" method="POST" action="{% url 'account_login' %}">
+	  {% csrf_token %}
+	  {{ form.as_p }}
+	  {% if redirect_field_value %}
+	  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+	  {% endif %}
+	  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+	  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+	</form>
+</div>
 {% endblock %}
