--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -70,12 +70,7 @@ font-size: 70px;
      padding: 0px;
 }
 */
-.block-formregister{
-    /*top: -120px;*/
-    margin-bottom: 0px;
-    height: 320px; /*320px*/
-    margin-top: 140px;
-}
+
 
 .links{
     float: left;
@@ -403,7 +398,14 @@ position: 200px;
 
 	
 }
-
+.block-formregister{
+    /*top: -120px;*/
+    height: auto; /*320px*/
+    position: absolute;
+    top:-100px;
+    right:70px;
+ 
+}
 
 
 
