--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -223,7 +223,19 @@
           <div class="col-lg-3"><a class="photos">Mirar fotos</a></div>
         </div>
       </div>
-     
+      <div class="messages">
+        <div class="messages-box">
+          <div class="message notice">
+            <button data-close="true" class="close"></button>
+            <div class="message-text"></div>
+          </div>
+          <div class="message success">
+            <button data-hide="true" class="close"></button>
+            <div class="message-text"></div>
+          </div>
+          <div class="message error">
+            <button data-close="true" class="close"></button>
+            <div class="message-text"></div>
           </div>
         </div>
       </div>
