--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -497,3 +497,42 @@ padding: 0px;
 margin-left:15px;
 text-shadow: 1px 1px 1px rgba(255,255,255,0.5); 
 }
+.fontawesome-cog {
+  display: inline-block;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow;
+  transition-property: box-shadow;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+.fontawesome-cog:hover, .fontawesome-cog:focus, .fontawesome-cog:active {
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+}
+.fontawesome-th {
+  display: inline-block;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow;
+  transition-property: box-shadow;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+.fontawesome-th:hover, .fontawesome-th:focus, .fontawesome-th:active {
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+}
+  .fontawesome-comment-alt {
+  display: inline-block;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow;
+  transition-property: box-shadow;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+.fontawesome-comment-alt:hover, .fontawesome-comment-alt:focus, .fontawesome-comment-alt:active {
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+}
