--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -395,7 +395,31 @@ position: 200px;
 }
 
 #link-login{
-
+-moz-box-shadow: 0px 1px 0px 0px #f0f7fa;
+    -webkit-box-shadow: 0px 1px 0px 0px #f0f7fa;
+    box-shadow: 0px 1px 0px 0px #f0f7fa;
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #33bdef), color-stop(1, #019ad2));
+    background:-moz-linear-gradient(top, #B133F0 5%, #019ad2 100%);
+    background:-webkit-linear-gradient(top, #B133F0 5%, #019ad2 100%);
+    background:-o-linear-gradient(top, #B133F0 5%, #019ad2 100%);
+    background:-ms-linear-gradient(top, #B133F0 5%, #019ad2 100%);
+    background:linear-gradient(to bottom, #B133F0 5%, #019ad2 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#33bdef', endColorstr='#019ad2',GradientType=0);
+    background-color:#B133F0;
+    -moz-border-radius:6px;
+    -webkit-border-radius:6px;
+    border-radius:6px;
+    border:1px solid #057fd0;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:arial;
+    font-size:15px;
+    font-weight:bold;
+    padding:6px 24px;
+    text-decoration:none;
+    text-shadow:0px -1px 0px #5b6178;
+    float:left;
 	
 }
 .block-formregister{
