--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -398,7 +398,7 @@ position: 200px;
 -moz-box-shadow: 0px 1px 0px 0px #f0f7fa;
     -webkit-box-shadow: 0px 1px 0px 0px #f0f7fa;
     box-shadow: 0px 1px 0px 0px #f0f7fa;
-    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #33bdef), color-stop(1, #019ad2));
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #B133F0), color-stop(1, #019ad2));
     background:-moz-linear-gradient(top, #B133F0 5%, #019ad2 100%);
     background:-webkit-linear-gradient(top, #B133F0 5%, #019ad2 100%);
     background:-o-linear-gradient(top, #B133F0 5%, #019ad2 100%);
