--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -404,7 +404,7 @@ position: 200px;
     background:-o-linear-gradient(top, #B133F0 5%, #019ad2 100%);
     background:-ms-linear-gradient(top, #B133F0 5%, #019ad2 100%);
     background:linear-gradient(to bottom, #B133F0 5%, #019ad2 100%);
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#33bdef', endColorstr='#019ad2',GradientType=0);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#B133F0', endColorstr='#019ad2',GradientType=0);
     background-color:#B133F0;
     -moz-border-radius:6px;
     -webkit-border-radius:6px;
@@ -421,6 +421,16 @@ position: 200px;
     text-shadow:0px -1px 0px #5b6178;
     float:left;
 	
+}
+.link-login:hover {
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #019ad2), color-stop(1, #B133F0));
+    background:-moz-linear-gradient(top, #019ad2 5%, #B133F0 100%);
+    background:-webkit-linear-gradient(top, #019ad2 5%, #B133F0 100%);
+    background:-o-linear-gradient(top, #019ad2 5%, #B133F0 100%);
+    background:-ms-linear-gradient(top, #019ad2 5%, #B133F0 100%);
+    background:linear-gradient(to bottom, #019ad2 5%, #B133F0 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#019ad2', endColorstr='#B133F0',GradientType=0);
+    background-color:#019ad2;
 }
 .block-formregister{
     /*top: -120px;*/
