--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -398,13 +398,13 @@ position: 200px;
 -moz-box-shadow: 0px 1px 0px 0px #f0f7fa;
     -webkit-box-shadow: 0px 1px 0px 0px #f0f7fa;
     box-shadow: 0px 1px 0px 0px #f0f7fa;
-    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #79FF72), color-stop(1, #D030FF));
-    background:-moz-linear-gradient(top, #79FF72 5%, #D030FF 100%);
-    background:-webkit-linear-gradient(top, #79FF72 5%, #D030FF 100%);
-    background:-o-linear-gradient(top, #79FF72 5%, #D030FF 100%);
-    background:-ms-linear-gradient(top, #79FF72 5%, #D030FF 100%);
-    background:linear-gradient(to bottom, #79FF72 5%, #D030FF 100%);
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#B133F0', endColorstr='#D030FF',GradientType=0);
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #79FF72), color-stop(1, #79FF72));
+    background:-moz-linear-gradient(top, #79FF72 5%, #79FF72 100%);
+    background:-webkit-linear-gradient(top, #79FF72 5%, #79FF72 100%);
+    background:-o-linear-gradient(top, #79FF72 5%, #79FF72 100%);
+    background:-ms-linear-gradient(top, #79FF72 5%, #79FF72 100%);
+    background:linear-gradient(to bottom, #79FF72 5%, #79FF72 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#B133F0', endColorstr='#79FF72',GradientType=0);
     background-color:#79FF72;
     -moz-border-radius:6px;
     -webkit-border-radius:6px;
@@ -423,14 +423,14 @@ position: 200px;
 	
 }
 #link-login:hover {
-    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #D030FF), color-stop(1, #79FF72));
-    background:-moz-linear-gradient(top, #D030FF 5%, #79FF72 100%);
-    background:-webkit-linear-gradient(top, #D030FF 5%, #79FF72 100%);
-    background:-o-linear-gradient(top, #D030FF 5%, #79FF72 100%);
-    background:-ms-linear-gradient(top, #D030FF 5%, #79FF72 100%);
-    background:linear-gradient(to bottom, #D030FF 5%, #79FF72 100%);
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#D030FF', endColorstr='#B133F0',GradientType=0);
-    background-color:#D030FF;
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #79FF72), color-stop(1, #79FF72));
+    background:-moz-linear-gradient(top, #79FF72 5%, #79FF72 100%);
+    background:-webkit-linear-gradient(top, #79FF72 5%, #79FF72 100%);
+    background:-o-linear-gradient(top, #79FF72 5%, #79FF72 100%);
+    background:-ms-linear-gradient(top, #79FF72 5%, #79FF72 100%);
+    background:linear-gradient(to bottom, #79FF72 5%, #79FF72 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#79FF72', endColorstr='#B133F0',GradientType=0);
+    background-color:#79FF72;
 }
 .block-formregister{
     /*top: -120px;*/
