--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -261,6 +261,7 @@
   <label for="tab3">Comentarios</label>
             
           </ul>
+          <section id="content1">
           <ul class="unstyled content">
             <div class="wrapper">
   <div id="box">
@@ -333,6 +334,7 @@
       </div>
       </div>
       </div>
+    </section>
       </main>
  
       <div class="col-lg-12">
