--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div id="panel">
+<div id="panel"> 
 
   <div id="widget" onClick="cambiopagina()"> 
 <!--
@@ -246,22 +246,16 @@
       </div>
     </div>
   </div>
-<main>
+
   <div class="col-lg-4 col-md-6 col-sm-12">
     <div class="container">
       <div class="col-lg-12">
         <div class="sidebar card">
           <ul class="unstyled table fullwidth links">
-            <input class="active" type="radio" name="tabs" checked> 
-            <label for"tab1">Popular</label>
-            <input class="recientes" type="radio" name="tabs">
-  <label for="tab2">Recientes</label>
-    
-  <input class="comentarios" type="radio" name="tabs">
-  <label for="tab3">Comentarios</label>
-            
+            <li class="active"><a>Popular</a></li>
+            <li class="comentarios"><a>Comentarios</a></li>
+            <li class="active"><a>Recientes</a></li>
           </ul>
-          <section id="content1">
           <ul class="unstyled content">
             <div class="wrapper">
   <div id="box">
@@ -334,8 +328,7 @@
       </div>
       </div>
       </div>
-    </section>
-      </main>
+      
  
       <div class="col-lg-12">
         <div class="weather card">
