--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -251,11 +251,13 @@
     <div class="container">
       <div class="col-lg-12">
         <div class="sidebar card">
+          <div id="tabs"
           <ul class="unstyled table fullwidth links">
-            <li class="active"><a>Popular</a></li>
-            <li class="comentarios"><a>Comentarios</a></li>
-            <li class="active"><a>Recientes</a></li>
+            <li class="active"><a href="tabs-1">Popular</a></li>
+            <li class="comentarios"><a href="tabs-2">Comentarios</a></li>
+            <li class="active"><a href="tabs-3">Recientes</a></li>
           </ul>
+          <div id="tabs-1">
           <ul class="unstyled content">
             <div class="wrapper">
   <div id="box">
@@ -328,7 +330,8 @@
       </div>
       </div>
       </div>
-      
+      </div>
+    </div>
  
       <div class="col-lg-12">
         <div class="weather card">
