--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -204,7 +204,7 @@ dropdown{
 dropdown label, dropdown ul li{
   display: block;
   width: 200px;
-  background: #ECF0F1;
+  background: transparent;
   padding: 15px 20px;
 }
 dropdown label:hover, dropdown ul li:hover{
