--- a/skyfolk/static/css/style.css
+++ b/skyfolk/static/css/style.css
@@ -2,15 +2,15 @@
 
 
 
-.store
+.store {
   position absolute
   top 50%
   left 50%
   transform translate(-50%, -50%)
   display table
   text-align center
-
-a
+}
+a {
   position relative
   border 0
   text-decoration none
@@ -28,14 +28,17 @@ a
     background #191919
   &.playstore
     background #22AFC2
-  i
+  }
+  i {
     font-size 16px
     position absolute
     margin-top 11px
     margin-left -20px
-  &:hover
+     }
+  &:hover {
     color rgba(255,255,255,1)
-  &:after
+  }
+  &:after{
     content ''
     position absolute
     width 200px
@@ -43,8 +46,10 @@ a
     transform skewX(-25deg)
     background-image linear-gradient(to right,transparent,rgba(white, .14),transparent)
     height 50px
-  &:hover:after
+  }
+  &:hover:after{
     animation shine .8s ease
+  }
 
 @keyframes shine
   to
