--- a/skyfolk/static/css/style.css
+++ b/skyfolk/static/css/style.css
@@ -3,58 +3,60 @@
 
 
 .store {
-  position absolute
-  top 50%
-  left 50%
-  transform translate(-50%, -50%)
-  display table
-  text-align center
+  position absolute;
+  top 50%;
+  left 50%;
+  transform translate(-50%, -50%);
+  display table;
+  text-align center;
 }
 a {
-  position relative
-  border 0
-  text-decoration none
-  line-height 38px
-  display inline-block
-  padding 0px 20px 0px 36px
-  border-radius 5px
-  transition all 0.3s ease
-  overflow hidden
-  font-weight 400
-  font-size 12px
-  color rgba(255,255,255,.9)
-  margin 10px
-  &.appstore
-    background #191919
-  &.playstore
-    background #22AFC2
+  position relative;
+  border 0;
+  text-decoration none;
+  line-height 38px;
+  display inline-block;
+  padding 0px 20px 0px 36px;
+  border-radius 5px;
+  transition all 0.3s ease;
+  overflow hidden;
+  font-weight 400;
+  font-size 12px;
+  color rgba(255,255,255,.9);
+  margin 10px;
+}
+  i.appstore {
+    background #191919;
+  }
+  i.playstore{
+    background #22AFC2;
   }
   i {
-    font-size 16px
-    position absolute
-    margin-top 11px
-    margin-left -20px
+    font-size 16px;
+    position absolute;
+    margin-top 11px;
+    margin-left -20px;
      }
-  &:hover {
-    color rgba(255,255,255,1)
+  i:hover {
+    color rgba(255,255,255,1);
   }
-  &:after{
+  i:after{
     content ''
-    position absolute
-    width 200px
-    left -200px
-    transform skewX(-25deg)
-    background-image linear-gradient(to right,transparent,rgba(white, .14),transparent)
-    height 50px
+    position absolute;
+    width 200px;
+    left -200px;
+    transform skewX(-25deg);
+    background-image linear-gradient(to right,transparent,rgba(white, .14),transparent);
+    height 50px;
   }
-  &:hover:after{
-    animation shine .8s ease
+  i:hover:after{
+    animation shine .8s ease;
   }
 
-@keyframes shine
+@keyframes shine {
   to
-    left 200px
-
+    left 200px;
+}
 .logged-in {
     background: gainsboro url("/static/img/index_bg.png") no-repeat center 80px;
 }
