--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1275,6 +1275,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   width: 750px;
   top: -50px;
   float: left;
+  left: 20px;
 }
 
 #menu > ul {
