--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1271,7 +1271,8 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
 
 #menu {
-  margin: 5px auto 0;
+  margin: 30px auto 0;
+  margin-right: 200px;
   width: 750px;
   top: -50px;
   position:relative;
