--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -137,6 +137,7 @@ font-size: 70px;
     background: #fff;
     border: 3px solid #51cbee;
     outline: none;
+    color: black;
     transition: all .3s ease-in-out; /* Remove Chrome outline */
 }
 
