--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -440,7 +440,7 @@ font-size: 70px;
     /* Size and position */
     width: 250px;
     position: absolute;
-    margin: 0px auto 0px 170px;
+    margin: 100px auto 0px 170px;
     padding: 100px 50px 50px;
     overflow: hidden;
     /* Styles */
@@ -466,16 +466,16 @@ font-size: 70px;
 .form-2 ul.mis_cuentas li {
     position: relative;
     display: inline-block;
-    margin: 20px auto;
+    margin: 10px auto;
     cursor: pointer;
     border: none;
 }
 .form-2 ul.mis_cuentas li p{
     display: inline-block
     position: relative;
-    margin: -40px 70px;
+    margin: -40px 40px;
     color: #56B9B9;
-    text-align: right;
+    text-align: center;
     font-weight: 100;
     padding: 0;
 }
