--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -433,14 +433,14 @@ font-size: 70px;
  
 }
 
-
+/* CUENTAS GUARDADAS */
 .form-2 {
     ont-family: 'Ubuntu', 'Lato', sans-serif;
     font-weight: 100;
     /* Size and position */
     width: 250px;
     position: absolute;
-    margin: 100px auto 0px 170px;
+    margin: 170px auto 0px 170px;
     padding: 100px 50px 50px;
     overflow: hidden;
     /* Styles */
@@ -449,7 +449,7 @@ font-size: 70px;
     border: 1px solid #191919;
     box-shadow: inset 0 0 2px 1px rgba(255,255,255,0.08), 
         0 16px 10px -8px rgba(0, 0, 0, 0.6);
-    background-color: #000000;
+    background-color: #FFF;
     height: auto;
     font-family: 'Open Sans', sans-serif;
 }
