--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -501,3 +501,8 @@ img:hover {
     border: 2px solid tomato;
     opacity: 0.7;
 }
+a.entypo-plus {
+    font-size: 40px;
+    color: white;
+    position: relative;
+}
