--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -505,4 +505,14 @@ a.entypo-plus {
     font-size: 40px;
     color: white;
     position: absolute;
+    padding: 15px 15px;
+    color: #56B9B9;
+    background: #000;
+    transition: all .2s ease-in;
+    margin-top: 50%;
+    left: 50%;
+}
+a.entypo-plus:hover {
+    color: #000;
+    background: #56B9B9;
 }
