--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -511,6 +511,8 @@ a.entypo-plus {
     transition: all .2s ease-in;
     margin-top: 33%;
     left: 50.5%;
+    opacity: 0.7;
+    border-radius: 7px;
 }
 a.entypo-plus:hover {
     color: #fff;
