--- a/skyfolk/static/css/jquery.gritter.css
+++ b/skyfolk/static/css/jquery.gritter.css
@@ -111,7 +111,7 @@
 
 	float:left;
 	display:block;
-	margin-top: 8px;
+	margin-top: 7px;
 	background-color: #2D882D;
 	color: white;
 	padding: 5px 5px 5px 5px;
@@ -119,19 +119,34 @@
     font-size: 200;
     border-radius: 5px;
     outline: none; 
-    -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, .2);
     cursor: pointer;
     transition: all .3s ease-in;
 
 
 }
+#gritter-notice-wrapper .gritter-item #gritter_button1:hover{
 
+	float:left;
+	display:block;
+	margin-top: 7px;
+	background-color: white;
+	color: #2D882D;
+	padding: 5px 5px 5px 5px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 200;
+    border-radius: 5px;
+    outline: none; 
+    cursor: pointer;
+    transition: all .3s ease-in;
+
+
+}
 /*modification*/
 #gritter-notice-wrapper .gritter-item #gritter_button2{
 
 	float:right;
 	display:block;
-	margin-top: 8px;
+	margin-top: 7px;
 	background-color: #FF2525;
 	color: white;
 	padding: 5px 5px 5px 5px;
@@ -139,7 +154,22 @@
     font-size: 200;
     border-radius: 5px;
     outline: none; 
-    -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, .2);
+    cursor: pointer;
+    transition: all .3s ease-in;
+
+}
+#gritter-notice-wrapper .gritter-item #gritter_button2:hover{
+
+	float:right;
+	display:block;
+	margin-top: 7px;
+	background-color: white;
+	color: #FF2525;
+	padding: 5px 5px 5px 5px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 200;
+    border-radius: 5px;
+    outline: none; 
     cursor: pointer;
     transition: all .3s ease-in;
 
