--- a/skyfolk/static/css/jquery.gritter.css
+++ b/skyfolk/static/css/jquery.gritter.css
@@ -121,6 +121,7 @@
     outline: none; 
     cursor: pointer;
     transition: all .3s ease-in;
+    border: none;
 
 
 }
@@ -156,6 +157,7 @@
     outline: none; 
     cursor: pointer;
     transition: all .3s ease-in;
+    border: none;
 
 }
 #gritter-notice-wrapper .gritter-item #gritter_button2:hover{
