--- a/skyfolk/static/css/jquery.gritter.css
+++ b/skyfolk/static/css/jquery.gritter.css
@@ -122,6 +122,8 @@
     cursor: pointer;
     transition: all .3s ease-in;
     border: none;
+    text-shadow: 0px -2px #2D882D;
+    border-bottom: 5px solid #2D882D;
 
 
 }
@@ -139,6 +141,7 @@
     outline: none; 
     cursor: pointer;
     transition: all .3s ease-in;
+    border: 1px solid #2D882D;
 
 
 }
@@ -158,6 +161,8 @@
     cursor: pointer;
     transition: all .3s ease-in;
     border: none;
+    text-shadow: 0px -2px #FF2525;
+    border-bottom: 5px solid #FF2525;
 
 }
 #gritter-notice-wrapper .gritter-item #gritter_button2:hover{
@@ -174,5 +179,6 @@
     outline: none; 
     cursor: pointer;
     transition: all .3s ease-in;
+    border: 1px solid #FF2525;
 
 }
