--- a/skyfolk/static/css/amigos.css
+++ b/skyfolk/static/css/amigos.css
@@ -636,129 +636,7 @@ fieldset {
   border: none;
   font-family: 'Open Sans', sans-serif;
 }
-.controls {
-	position: relative;
-	width: 60px;
-   height: 190px;
-	right: 10%;
-  float: right;
-	bottom: 20%;
-  margin-top: 0%;
-  
-	.new-post, .live {
-		background: #29506D;
-		border-radius: 50%;
-		text-align: center;
-		position: absolute;
-		right: 0;
-		bottom: 0;
-		cursor: pointer;
-		z-index: 2;
 
-		.icon {
-			font-size: 27px;
-			color: #fff;
-			line-height: 60px;
-			transition: all 700ms cubic-bezier(.4,0,.2,1);
-			position: relative;
-
-			&.icon-plus {
-          position: absolute;
-          margin-left: 1px;
-          margin-top: 1px;
-				&.unactive {
-					opacity: 0;
-					transform: rotate(-225deg);
-				}
-			}
-
-			&.icon-pencil {
-				opacity: 0;
-				&.active {
-					opacity: 1;
-					transform: rotate(360deg);
-				}
-			}
-		}
-	}
-
-	.new-post { 
-    width: 60px;
-    height: 60px;
-  }
-
-	.live {
-		width: 40px;
-     position: relative;
-     height: 40px;
-		background: #B5E86F;
-		z-index: 1;
-		bottom: 0;
-     top: 180px;
-     left: -68px;;
-		opacity: 0;
-		right: 10px;
-		transition: all 700ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-
-		.icon-lock { 
-			line-height: 40px;
-			font-size: 15px;
-		}
-
-		&.active {
-			bottom: 80px;
-			opacity: 1;
-		}
-
-		&:hover {
-			width: 60px;
-        height: 60px;
-			right: 0;
-      
-			.icon-lock { 
-				line-height: 60px;
-				font-size: 20px;
-			}
-		}
-	}
-}
-
-.live2 {
-		width: 40px;
-     height: 40px;
-     position: relative;
-		background: tomato;
-		z-index: 1;
-     color: white;
-		bottom: 0px;
-		opacity: 0;
-     border-radius: 100%;
-     text-align: center;
-		top: 143px;
-     left: 80px;
-     float: left;
-		transition: all 700ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
-
-		.icon-lock2 { 
-			line-height: 40px;
-			font-size: 15px;
-		}
-
-		&.active {
-			bottom: 10px;
-			opacity: 1;
-		}
-
-		&:hover {
-			width: 60px;
-        height: 60px;
-			right: 0;
-			.icon-lock2 { 
-				line-height: 60px;
-				font-size: 20px;
-			}
-		}
-	}
 button.all {
   border: none;
   outline: none;
@@ -935,3 +813,129 @@ padding: 0;
 margin: auto;
 top: -1.4em;
 }
+
+/* NUEVO GRUPOS */
+
+.controls {
+	position: relative;
+	width: 60px;
+   height: 190px;
+	right: 10%;
+  float: right;
+	bottom: 20%;
+  margin-top: 0%;
+  
+	.new-post, .live {
+		background: #29506D;
+		border-radius: 50%;
+		text-align: center;
+		position: absolute;
+		right: 0;
+		bottom: 0;
+		cursor: pointer;
+		z-index: 2;
+
+		.icon {
+			font-size: 27px;
+			color: #fff;
+			line-height: 60px;
+			transition: all 700ms cubic-bezier(.4,0,.2,1);
+			position: relative;
+
+			&.icon-plus {
+          position: absolute;
+          margin-left: 1px;
+          margin-top: 1px;
+				&.unactive {
+					opacity: 0;
+					transform: rotate(-225deg);
+				}
+			}
+
+			&.icon-pencil {
+				opacity: 0;
+				&.active {
+					opacity: 1;
+					transform: rotate(360deg);
+				}
+			}
+		}
+	}
+
+	.new-post { 
+    width: 60px;
+    height: 60px;
+  }
+
+	.live {
+		width: 40px;
+     position: relative;
+     height: 40px;
+		background: #B5E86F;
+		z-index: 1;
+		bottom: 0;
+     top: 180px;
+     left: -68px;;
+		opacity: 0;
+		right: 10px;
+		transition: all 700ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+
+		.icon-lock { 
+			line-height: 40px;
+			font-size: 15px;
+		}
+
+		&.active {
+			bottom: 80px;
+			opacity: 1;
+		}
+
+		&:hover {
+			width: 60px;
+        height: 60px;
+			right: 0;
+      
+			.icon-lock { 
+				line-height: 60px;
+				font-size: 20px;
+			}
+		}
+	}
+}
+
+.live2 {
+		width: 40px;
+     height: 40px;
+     position: relative;
+		background: tomato;
+		z-index: 1;
+     color: white;
+		bottom: 0px;
+		opacity: 0;
+     border-radius: 100%;
+     text-align: center;
+		top: 143px;
+     left: 80px;
+     float: left;
+		transition: all 700ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+
+		.icon-lock2 { 
+			line-height: 40px;
+			font-size: 15px;
+		}
+
+		&.active {
+			bottom: 10px;
+			opacity: 1;
+		}
+
+		&:hover {
+			width: 60px;
+        height: 60px;
+			right: 0;
+			.icon-lock2 { 
+				line-height: 60px;
+				font-size: 20px;
+			}
+		}
+	}
