--- a/skyfolk/templates/account/amigos.html
+++ b/skyfolk/templates/account/amigos.html
@@ -3,7 +3,8 @@
   <script type="text/javascript" src="http://code.jquery.com/jquery-2.0.0.min.js" /></script>
   <script src="{{STATIC_URL}}js/friends.js"></script>
   <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/amigos.css" />
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">  
+  <script src='http://codepen.io/assets/libs/fullpage/jquery.js'></script>
+ <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">  
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 
