--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -214,9 +214,8 @@ button.register:hover {
 
 .form-3 input[type=text]:focus, 
 .form-3 input[type=password]:focus {
-    box-shadow: inset 0 0 2px #000;
-    background: #fff;
-    border: 3px solid #51cbee;
+    box-shadow: inset 0.5px 0.5px 2px #51cbee;
+    background: #efefef;
     outline: none;
     color: black;
     transition: all .3s ease-in-out; /* Remove Chrome outline */
