--- a/skyfolk/static/css/login-signup.css
+++ b/skyfolk/static/css/login-signup.css
@@ -215,7 +215,7 @@ button.register:hover {
 .form-3 input[type=text]:focus, 
 .form-3 input[type=password]:focus {
     box-shadow: inset 0.5px 0.5px 2px #51cbee;
-    box-shadow: 4px 4px 2px #51cbee;
+    box-shadow: 1px 1px 1px 1px #51cbee;
     background: #efefef;
     outline: none;
     color: black;
