--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -404,7 +404,7 @@
 							  <article class="articulo">
 							    <h2 class="h22"><a href="/profile/{{ item.user__username }}" >{{item.user__username}}</a> mentioned you</h2>
 							    <div class="parrafo comment">
-							      <a target="_blank">{{item.from_publication__created}}</a> {{item.from_publication__content}}
+							      <a target="_blank">{{item.from_publication__created}}</a><br>{{item.from_publication__content}}
 							    </div>
 							  </article>
 					  	</div>
